# Funemon

./: README.md  TROUBLESHOOTING.md  benchmark_ecosystem.sh
.github/workflows/: update-docs.yml
docs/: BENCHMARK.md  benchmark_results_20260409_235251.md
funemon-ecosystem/: SPEC-core-implementation.md
funemon-system/: AGENTS.md  Cargo.toml  SKILLS.md  TEST_REPORT_GET_PROJECT_CONTEXT.md  opencode.json
funemon-system/src/: lib.rs  main.rs
funemon-system/src/cli/: commands.rs  handlers.rs  shortcuts.rs
funemon-system/src/db/: connection.rs  feedback.rs  learning.rs  memory_ops.rs  mod.rs  models.rs  permissions.rs  permissions_tests.rs  reflection_ops.rs  session_ops.rs  teams.rs
funemon-system/src/mcp/: tools.rs
funemon-system/src/tui/: app.rs  mod.rs  state.rs
funemon-system/tests/: project_context_test.rs
mimir-system/: .gitignore  AGENTS.md  Cargo.toml  mimir.db  opencode.json
mimir-system/src/: main.rs
mimir-system/src/cli/: commands.rs  handlers.rs  mod.rs
mimir-system/src/db/: connection.rs  memory_ops.rs  mod.rs  models.rs  reflection_ops.rs  session_ops.rs
mimir-system/src/mcp/: server.rs  tools.rs
mimir-system/src/reflection/: llm_client.rs
mimir-system/src/tui/: app.rs
skills/architecture-guardrails/: SKILL.md
skills/autonomous/: SKILL.md
skills/branch-pr/: SKILL.md
skills/commit-hygiene/: SKILL.md
skills/debug/: SKILL.md
skills/docs-alignment/: SKILL.md
skills/docs-auto-update/: SKILL.md
skills/pr-review-deep/: SKILL.md
skills/project-detector/: SKILL.md
skills/rust-cli/: SKILL.md
skills/rust-db/: SKILL.md
skills/rust-error-handling/: SKILL.md
skills/rust-release/: SKILL.md
skills/rust-safety/: SKILL.md
skills/rust-tests/: SKILL.md
skills/sdd/: SKILL.md
skills/security/: SKILL.md
skills/tdd/: SKILL.md
