[package]
name = "funemon"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[lib]
name = "funemon"
path = "src/lib.rs"

[[bin]]
name = "funemon"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.39.0", features = ["bundled"] }
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.0", features = ["chrono04"] }
uuid = { version = "1.23.0", features = ["v4"] }
pin-project-lite = "0.2"
rmcp = { version = "1.1.1", features = ["server", "transport-io"] }
clap = { version = "4.4", features = ["derive"] }
clap_lex = "0.6"  # Fijar versión compatible con Rust 1.75
chrono = "0.4"
dirs = "5.0"
ratatui = "0.29"
crossterm = "0.28"