[package]
name = "mimir"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.39.0", features = ["bundled"] }
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.0", features = ["chrono04"] }
