[package]
name = "mimir"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11.27", features = ["blocking", "json"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.0", features = ["chrono04"] }
uuid = { version = "1.23.0", features = ["v4"] }
pin-project-lite = "0.2"
rmcp = { version = "0.16.0", features = ["server", "transport-io"] }
